--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "buffer": "^6.0.3"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "vite": "^6.2.6",
-    "gh-pages": "^6.1.1"
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
